--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
 
         <activity android:name=".OrganizationListActivity"></activity>
 
+        <activity android:name=".OrganizationDetailActivity"></activity>
+
     </application>
 
 </manifest>
