--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
 
         <activity android:name=".OrganizationDetailActivity"></activity>
 
+        <activity android:name=".ApplicantListActivity"></activity>
+
+        <activity android:name=".StudentVacancyListActivity"></activity>
     </application>
 
 </manifest>
